# mindzoo

./: .gitignore  README.md
decisions/: 0001-name-and-scope.md
js/: package.json  vite.config.js
js/src/: git.js  index.js  io.js  lfs.js  zip.js
js/src/test/: git.test.js  io.test.js  lfs.test.js  stub.js  zip.test.js
rs/: Cargo.toml
rs/src/: error.rs  git.rs  lfs.rs  lib.rs  zip.rs
rs/src/mind/: find_mind.rs  get_store_dir.rs  make_mind.rs  mod.rs  name_mind.rs  zip.rs
