[package]
name = "mindzoo"
version = "0.0.1"
description = "Omnipresent decentralized storage"
authors = ["fetsorn"]
license = "AGPLv3"
repository = "https://codeberg.org/norcivilianlabs/mindzoo"
edition = "2021"

[lib]
name = "mindzoo"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
time = "0.3.36" # to fix a rust version error in dependency tree https://github.com/time-rs/time/issues/693
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3.31"
futures-core = "0.3.31"
async-stream = "0.3.6"
log = "0.4.25"
tauri-plugin-dialog = "2.2.0"
zip = "2.2.2"
walkdir = "2.5.0"
tokio = "1.45.0"
temp-dir = { version = "0.1.16", git = "https://codeberg.org/fetsorn/temp-dir" }
clap = { version = "4.5.54", features = [ "derive" ] }
env = "1.0.1"
dirs = "6.0.0"
git2kit = { version = "0.1.1", git = "https://codeberg.org/fetsorn/git2kit" }
git2 = "0.20"
sha2 = "0.10"
hex = "0.4"
tauri-plugin-log = "2"

[target.'cfg(any(target_os = "ios", target_os = "macos", target_os = "android"))'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
libz-sys = { version = "1.1.2" }
